# sui_memory

./: .gitignore  README.md  pyproject.toml
scripts/: auto_save.sh  bulk_import.py  save_session.py
src/sui_memory/: chunker.py  config.py  db.py  embedder.py  filter.py  mcp_server.py  save.py  search.py
