[project]
name = "sui-memory"
version = "0.1.0"
description = "Long-term memory for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "numpy>=2.4.3",
    "sentence-transformers>=5.3.0",
    "sqlite-vec>=0.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sui_memory"]
